# webassembly-component-orchestration

./: .actrc  .gitignore  AGENTS.md  COMPOSITION_INTEGRATION.md  Cargo.toml  README.md  SPEC.md  TASKS.md  rust-toolchain.toml
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml
artifacts/: conformance-summary.json
conformance/: README.md
conformance/runner/: Cargo.toml  README.md
conformance/runner/src/: adapter.rs  lib.rs  main.rs  suite.rs
conformance/vectors/: README.md  duplicate-plan.cbor  duplicate-plan.sha256.txt  fixtures.json  hello-plan.cbor  hello-plan.sha256.txt  large-int-plan.cbor  large-int-plan.sha256.txt  multi-component-plan-unsorted.cbor  multi-component-plan-unsorted.sha256.txt  multi-component-plan.cbor  multi-component-plan.sha256.txt  nested-plan.cbor  nested-plan.sha256.txt
docs/: M11-SUMMARY.md  SECURITY.md  remaining-work-plan.md  runtime-linking.md  sigstore-security-review.md
examples/: README.md  build-all.sh  test-all.sh
examples/demos/: README.md  determinism-demo.sh  run-all-demos.sh  secrets-demo.sh  trust-demo.sh
examples/dynlink-dlopen-guest/: Cargo.toml  build.sh
examples/dynlink-dlopen-guest/src/: main.rs
examples/dynlink-echo-provider/: Cargo.toml  build.sh
examples/dynlink-echo-provider/src/: lib.rs
examples/dynlink-echo-provider/wit/: package.wit  world.wit
examples/dynlink-endpoint-consumer/: Cargo.toml  build.sh
examples/dynlink-endpoint-consumer/src/: main.rs
examples/hello-cli/: Cargo.toml  README.md  build.sh  run.sh
examples/hello-component/: Cargo.toml  build.sh
examples/hello-http/: Cargo.toml  README.md  build.sh  run.sh
hosts/: README.md
hosts/browser/: .gitignore  README.md  aba.html  index.html  package-lock.json  package.json  playwright.config.js  sqlext.html  vite.config.js
hosts/wasmtime/: Cargo.toml  README.md
hosts/wasmtime/resources/: placeholder.component.wat
hosts/wasmtime/src/: cbor_val.rs  compose_host.rs  dynlink.rs  emit.rs  events.rs  exec.rs  http.rs  lib.rs  limits.rs  main.rs  metrics.rs  pkcs11_backend.rs  pkcs11_signer.rs  plan.rs  policy.rs  trust.rs  types.rs
hosts/wasmtime/src/secrets/: dev.rs  mod.rs  pkcs11.rs
hosts/wasmtime/src/trust/: backends.rs
hosts/wasmtime/tests/: aba_dynlink_spike.rs  http_exec.rs  orchestrator_smoke.rs  pkcs11_signer.rs  runtime_linking.rs  sqlite_ext_endpoint_declarative.rs
hosts/wasmtime/wit/keystore/: world.wit
libs/compose-core/: Cargo.toml
libs/compose-core/benches/: plan.rs
libs/compose-core/fuzz/: Cargo.toml
libs/compose-core/fuzz/fuzz_targets/: plan_parse.rs
libs/compose-core/src/: attest.rs  audit.rs  blobs.rs  compile_cache.rs  emit.rs  events.rs  lib.rs  limits.rs  metrics.rs  plan.rs  policy.rs  trust.rs  types.rs
libs/compose-core/src/host/: blob_storage.rs  clock.rs  mod.rs  signer.rs
libs/compose-core/src/secrets/: dev.rs  mod.rs
libs/compose-core/src/trust/: backends.rs
libs/compose-fetcher/: Cargo.toml
libs/compose-fetcher/src/: lib.rs
libs/compose-orchestrator-wasm/: Cargo.toml  README.md  build.sh
libs/compose-orchestrator-wasm/src/: adapters.rs  lib.rs  wit_secure_log.rs
libs/compose-orchestrator-wasm/wit/: smoke.wit  world.wit
libs/compose-rdf/: Cargo.toml
libs/compose-rdf/src/: lib.rs
libs/compose-store-sqlite/: Cargo.toml
libs/compose-store-sqlite/src/: lib.rs
libs/compose-store-sqlite/tests/: cli_interop.rs  store.rs
libs/host-stubs/: .gitignore  Cargo.toml  README.md
libs/host-stubs/bootstrap-stub/: Cargo.toml
libs/host-stubs/bootstrap-stub/src/: lib.rs
libs/host-stubs/bootstrap-stub/wit/: world.wit
libs/host-stubs/runtime-control-stub/: Cargo.toml
libs/host-stubs/runtime-control-stub/src/: lib.rs
libs/host-stubs/runtime-control-stub/wit/: world.wit
libs/host-stubs/runtime-info-stub/: Cargo.toml
libs/host-stubs/runtime-info-stub/src/: lib.rs
libs/host-stubs/runtime-info-stub/wit/: world.wit
libs/pkcs11-host-adapter/: Cargo.toml  README.md  build.rs
libs/pkcs11-host-adapter/src/: lib.rs
libs/pkcs11-wit/: .gitignore  API_COVERAGE.md  README.md
libs/trust-backends/: Cargo.toml
libs/trust-backends/src/: lib.rs
libs/trust-backends/tests/: sigstore.rs
libs/trust-backends/tests/fixtures/: README.md
scripts/: build-placeholder.sh  ci-local.sh  sync-wit.sh
scripts/release/: README.md  generate-provenance.sh  package-wit.sh  push-oci.sh  release.sh  verify-bundle.sh
spec/: errors.md  events.md  plan.cddl  trust.md
spike-aba-dynlink/: .gitignore  README.md  build.sh
spike-aba-dynlink/aba-endpoint/: Cargo.toml
spike-aba-dynlink/aba-endpoint/src/: lib.rs
spike-aba-dynlink/aba-endpoint/wit/: adapter.wit  linker.wit
spike-aba-dynlink/harness/: Cargo.toml
spike-aba-dynlink/harness/src/: main.rs
sqlite-extension-endpoint/: README.md  build.sh
sqlite-extension-endpoint/harness/: Cargo.toml
sqlite-extension-endpoint/harness/src/: main.rs
sqlite-extension-endpoint/harness/wit/: endpoint.wit
sqlite-extension-endpoint/provider/: Cargo.toml
sqlite-extension-endpoint/provider/src/: envelope.rs  lib.rs
sqlite-extension-endpoint/provider/wit/: world.wit
sqlite-extension-endpoint/test-extensions/dotret/: Cargo.toml  dispatch-bridge-cas.wit  dotcmd.wit  guest.wit
sqlite-extension-endpoint/test-extensions/dotret/src/: lib.rs
sqlite-extension-endpoint/test-extensions/dotret/wit/: host-spi.wit  loader-bridge.wit  world.wit
sqlite-extension-endpoint/test-extensions/hookcb/: Cargo.toml
sqlite-extension-endpoint/test-extensions/hookcb/src/: lib.rs
sqlite-extension-endpoint/test-extensions/hookcb/wit/: policy.wit
tools/: README.md
tools/composectl/: Cargo.toml  README.md
tools/composectl/src/: cli.rs  main.rs  main.rs.old
tools/composectl/testdata/: hello.json  minimal.json
wit/: README.md
wit/compose-dynlink/: world.wit
wit/compose-host/: README.md  invoker.wit  package.wit  runner.wit  runtime-info.wit  smoke.wit  world.wit
wit/keys-keystore/: keystore.wit
wit/std-attest/: attest.wit
wit/std-audit/: audit.wit
wit/std-metrics/: metrics.wit
wit/std-secrets/: package.wit  secrets.wit
(+30 files in other folders)
