[workspace]
members = [
    "hosts/wasmtime",
    "tools/composectl",
    "conformance/runner",
    "libs/compose-core",
    "libs/compose-store-sqlite",
    "libs/pkcs11-host-adapter",
    "libs/trust-backends",
]
# Examples are wasm components built via their own build.sh scripts
# (wasm32-wasip1 / wasm32-wasip2) and must not be part of the native
# workspace build.
exclude = [
    "examples/hello-cli",
    "examples/hello-http",
    "examples/dynlink-echo-provider",
    "examples/dynlink-endpoint-consumer",
    "examples/dynlink-dlopen-guest",
    "examples/hello-component",
    "libs/compose-orchestrator-wasm",
]
resolver = "2"
