[package]
name = "conformance-runner"
version = "0.0.1"
edition = "2021"
description = "Conformance test suite for compositional WebAssembly system"
publish = false

[lib]
name = "conformance_runner"
path = "src/lib.rs"

[[bin]]
name = "conformance"
path = "src/bin/conformance.rs"

[dependencies]
# Host implementation
compose-host-wasmtime = { path = "../../hosts/wasmtime" }

# CLI
anyhow = "1"
camino = { version = "1", features = ["serde1"] }
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
hex = "0.4"
sha2 = "0.10"
