[package]
name = "compose-host-wasmtime"
version = "0.0.1"
edition = "2021"
authors = ["Zachary Whitley <maintainer@example.com>"]
description = "Reference host runtime for the compositional WebAssembly system"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
wasmtime = { version = "44.0.1", features = ["component-model"] }
wasmtime-wasi = "44.0.1"
wat = "1"

# Portable orchestrator core (no wasmtime dependency)
compose-core = { path = "../../libs/compose-core" }

# Tamper-evident audit: native SQLite-backed secure log. The
# secure-log core crate comes transitively via compose-core; the
# host owns the durable SQLite store.
secure-log = { git = "https://github.com/tegmentum/secure-log.git", rev = "8ffec9c354280409b6a532df27b4e721701eb608" }
secure-log-sqlite = { git = "https://github.com/tegmentum/secure-log.git", rev = "8ffec9c354280409b6a532df27b4e721701eb608" }

# Used by exec cache and main.rs
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"

# HTTP server for serve-http
tokio = { version = "1", features = ["full"], optional = true }
axum = { version = "0.7", optional = true }

# PKCS#11 support for hardware security modules
pkcs11-host-adapter = { path = "../../libs/pkcs11-host-adapter", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
http-server = ["tokio", "axum"]
pkcs11 = ["pkcs11-host-adapter"]
