[package]
name = "compose-core"
version = "0.0.1"
edition = "2021"
authors = ["Zachary Whitley <maintainer@example.com>"]
description = "Wasmtime-free orchestrator core: plans, composition, policy, trust, secrets, audit"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
tracing = "0.1"

# CBOR / JSON serialization
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

# Hashing for CAS and digests
sha2 = "0.10"
hex = "0.4"

# WIT and component manipulation (wasm-tools, not wasmtime)
wasm-compose = { git = "https://github.com/tegmentum/wasm-tools.git", branch = "bytes-api" }
wasmparser = { git = "https://github.com/tegmentum/wasm-tools.git", branch = "bytes-api" }

# File system traversal for blob CAS
walkdir = "2"

[dev-dependencies]
tempfile = "3"
