[package]
name = "compose-core"
version = "0.0.1"
edition = "2021"
authors = ["Zachary Whitley <maintainer@example.com>"]
description = "Wasmtime-free orchestrator core: plans, composition, policy, trust, secrets, audit"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
tracing = "0.1"

# CBOR / JSON serialization
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

# Hashing for CAS and digests
sha2 = "0.10"
hex = "0.4"

# WIT and component manipulation (wasm-tools, not wasmtime)
wasm-compose = { git = "https://github.com/tegmentum/wasm-tools.git", branch = "bytes-api" }
wasmparser = { git = "https://github.com/tegmentum/wasm-tools.git", branch = "bytes-api" }

# File system traversal for blob CAS
walkdir = "2"

# Tamper-evident audit log. Core crate only (wasm32-wasip2 clean);
# the SQLite-backed store is a native concern wired by host crates.
secure-log = { path = "../../../secure-log/crates/secure-log" }
ed25519-dalek = { version = "2.2.0", default-features = false, features = ["std"] }

[dev-dependencies]
tempfile = "3"
# Tests use the in-memory SQLite store; native + dev-only, so it does
# not affect the wasm32-wasip2 library build.
secure-log-sqlite = { path = "../../../secure-log/crates/secure-log-sqlite" }
