[package]
name = "compose-core"
version = "0.0.1"
edition = "2021"
authors = ["Zachary Whitley <maintainer@example.com>"]
description = "Wasmtime-free orchestrator core: plans, composition, policy, trust, secrets, audit"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
tracing = "0.1"

# CBOR / JSON serialization
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

# Hashing for CAS and digests
sha2 = "0.10"
hex = "0.4"
# HMAC-SHA256 for the trust-gated compile cache. Pure-Rust, wasm32-wasip2
# clean (no runtime, no sqlite) — keeps compose-core's no-wasmtime/no-sqlite
# guarantee intact.
hmac = "0.12"

# Cryptographically secure entropy for secret bearer tokens. 0.3 has a
# first-class wasm32-wasip2 backend (wasi:random), so compose-core stays
# wasm-clean.
getrandom = "0.3"

# WIT and component manipulation (wasm-tools, not wasmtime)
wasm-compose = { git = "https://github.com/tegmentum/wasm-tools.git", branch = "bytes-api" }
wasmparser = { git = "https://github.com/tegmentum/wasm-tools.git", branch = "bytes-api" }
# wac-graph / wac-types — WIT-level composition that preserves resource
# type identity across plug/socket connections (wasm-compose's lower-level
# Config-based wiring doesn't). Used by `compose_with_wac_plug` to
# replace the previous wasm-compose-driven `compose_with_wrapper` path
# for resource-bearing components.
wac-graph = "0.10.1"
wac-types = "0.10.1"
# Direct dep on the version type used by wac-types::Package::from_bytes.
# Already transitively present via wac-types; named explicitly so the
# `None::<&semver::Version>` annotation can stay simple.
semver = "1"

# File system traversal for blob CAS
walkdir = "2"

# Tamper-evident audit log. Core crate only (wasm32-wasip2 clean);
# the SQLite-backed store is a native concern wired by host crates.
secure-log = { git = "https://github.com/tegmentum/secure-log.git", rev = "8ffec9c354280409b6a532df27b4e721701eb608" }
ed25519-dalek = { version = "2.2.0", default-features = false, features = ["std"] }

[dev-dependencies]
tempfile = "3"
# Tests use the in-memory SQLite store; native + dev-only, so it does
# not affect the wasm32-wasip2 library build.
secure-log-sqlite = { git = "https://github.com/tegmentum/secure-log.git", rev = "8ffec9c354280409b6a532df27b4e721701eb608" }
# Benchmarks only (dev-dep, native): plan encode/decode/digest/validate.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "plan"
harness = false
