[package]
name = "compose-orchestrator-wasm"
version = "0.0.1"
edition = "2021"
authors = ["Zachary Whitley <maintainer@example.com>"]
description = "Orchestrator built as a wasm component, consuming compose:host"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.57"

# The whole point: the orchestrator's logic is the compose-core crate.
# This dependency demonstrates the architecture — pure-Rust
# orchestrator code reachable from a wasm component.
compose-core = { path = "../compose-core" }
