[package]
name = "compose-rdf"
version = "0.0.1"
edition = "2021"
authors = ["Zachary Whitley <maintainer@example.com>"]
description = "Read a composition PlanV1 from RDF triples (SPARQL binding-set rows)"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
tracing = "0.1"
compose-core = { path = "../compose-core" }
# Turtle parser for the reverse direction: plan-from-turtle. oxttl is
# self-contained (no I/O, no async) and already targets wasm cleanly in
# the sibling oxigraph-wasm crate. oxrdf is oxttl's term crate — we
# reach into it directly to destructure the parsed triples.
oxttl = "0.2"
oxrdf = "0.3"

[dev-dependencies]
serde_json = "1"
