[package]
name = "compose-store-sqlite"
version = "0.0.1"
edition = "2021"
authors = ["Zachary Whitley <maintainer@example.com>"]
description = "SQLite-backed storage for compose-core PlanV1 orchestration definitions"
license = "Apache-2.0"
publish = false

# Reference: sqlite-wasm/cli's OrchestrationStore trait
# (cli/src/orchestration.rs in the sibling sqlite-wasm repo) is
# the contract this crate implements. The trait isn't formally
# imported — instead, the consumer (sqlite-wasm-cli) wraps this
# crate's `SqliteComposeStore` in an adapter that implements its
# own trait. Keeping the dependency direction outbound-only
# means this crate stays consumable by any caller that needs
# Plan storage, not just sqlite-wasm-cli.

[dependencies]
compose-core = { path = "../compose-core" }
# Pinned to 0.32 to match secure-log-sqlite's transitive
# requirement — the orchestration workspace already pulls
# libsqlite3-sys 0.30 via compose-core's secure-log dep, and the
# `links = "sqlite3"` constraint means only one version can win.
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
ciborium = "0.2"
hex = "0.4"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
