[package]
name = "trust-backends"
version = "0.0.1"
edition = "2021"
authors = ["Zachary Whitley <maintainer@example.com>"]
description = "Native trust backends (SigStore, PGP) for the compose orchestrator"
license = "Apache-2.0"
publish = false

# These backends pull heavy, often-native dependencies (X.509, OpenPGP,
# Merkle proofs). They live here, not in compose-core, so that crate stays
# wasm32-wasip2 clean. The wasmtime host registers them at startup.
[dependencies]
compose-core = { path = "../compose-core" }
tracing = "0.1"
hex = "0.4"
pgp = "0.19.0"
# Offline Sigstore bundle verification. default-features off: we never fetch
# trust roots over the network (the production root is embedded), so we avoid
# pulling TLS/TUF client code.
sigstore-verify = { version = "0.8.0", default-features = false }

[dev-dependencies]
tempfile = "3"
rand = "0.8"
