[package]
name = "aba-endpoint"
version = "0.1.0"
edition = "2021"
publish = false

# Detached from any parent workspace — built standalone via
# `cargo build --release --target wasm32-wasip2` in this dir.
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.33"
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
