[package]
name = "composectl"
version = "0.0.1"
edition = "2021"
authors = ["Zachary Whitley <maintainer@example.com>"]
description = "CLI for composing, emitting, and executing WebAssembly component plans"
license = "Apache-2.0"
publish = false

[dependencies]
# Host implementation
compose-host-wasmtime = { path = "../../hosts/wasmtime" }

# CLI framework
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
ciborium = "0.2"
serde_cbor = "0.11"

# Utilities
hex = "0.4"
camino = "1"
sha2 = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
